--- a/Pacial/Pacial/Pacial.csproj
+++ b/Pacial/Pacial/Pacial.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1835A287-B76E-4BC6-B651-B19FC6375CC6}</ProjectGuid>
+    <ProjectGuid>{338F976F-9876-4E31-B4A4-4AF50CF71EC0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Parcial</RootNamespace>
-    <AssemblyName>Parcial</AssemblyName>
+    <RootNamespace>Pacial</RootNamespace>
+    <AssemblyName>Pacial</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -54,9 +54,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
